Fixed modal-popup spacing on right side of page.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html {
 
 body {
 	font-family: 'Open Sans', sans-serif;
+	padding-right: 0px !important;
 }
 
 #navbarAbout p {
